# KCCIM

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  cpy.bat
include/: kccim.h  table.h
internal/: automata_states.h  kccim_internal.h
src/: automata.c  kccim.c  table.c
tests/Kccim.Gui/: Kccim.Gui.csproj  Program.cs
tests/Kccim.Tests/: Kccim.Tests.csproj  Program.cs
